@@ -110,6 +110,14 @@
 # Fixes playback for apple.com/trailers redirects
 #user-agent="QuickTime"
 
+# Pretend to be Realplayer SP
+# Fixes playback for some video streaming sites
+#user-agent=RMA/1.0
+
+# Pretend to be Winamp
+# Fixes playback of some NSV streams
+#user-agent="Winamp NSV Player/5.12 (ultravox/2.0)"
+
 # Drop frames to preserve audio/video sync.
 #framedrop = yes
 
